--- a/src/Components/CrudTableBody.css
+++ b/src/Components/CrudTableBody.css
@@ -1,5 +1,12 @@
 td{
     font-size: .9em;
-    color: rgba(255, 255, 255, 0.603);
-    
+    color: rgba(0, 0, 0, 0.801);
+    margin: 1em;
+}
+
+button{
+    border:none;
+    background-color: transparent;
+    border-bottom:1px solid black ;
+    cursor: pointer;
 }
