--- a/src/Components/CrudTableBody.css
+++ b/src/Components/CrudTableBody.css
@@ -1,12 +1,13 @@
 td{
     font-size: .9em;
     color: rgba(0, 0, 0, 0.801);
-    margin: 1em;
+    padding: 0.5em;
+    border-bottom: 1px solid black;
 }
 
 button{
     border:none;
     background-color: transparent;
-    border-bottom:1px solid black ;
+
     cursor: pointer;
 }
