--- a/src/Components/CrudForm.css
+++ b/src/Components/CrudForm.css
@@ -1,11 +1,50 @@
-h3{
-    color: rgba(255, 255, 255, 0.644);
-    margin-bottom: .5em;
-    padding-left: .5em;
-    font-size: 1.1em;
-    text-decoration: underline;
+h3 {
+  color: rgba(0, 0, 0, 0.836);
+  margin-bottom: 0.5em;
+  padding-left: 0.5em;
+  font-size: 1.1em;
+  text-transform: uppercase;
 }
 
-form{
-    margin-bottom: 1em;
+input {
+  margin-left: 0.3em;
+}
+
+.input {
+  border-radius: 0.2em;
+  border: none;
+  border-bottom: 1px solid black;
+  background-color: rgb(241, 236, 236);
+}
+
+.input:focus {
+  box-shadow: -2px 0px 20px -6px rgba(0, 0, 0, 0.96);
+  -webkit-box-shadow: -2px 0px 20px -6px rgba(0, 0, 0, 0.96);
+  -moz-box-shadow: -2px 0px 20px -6px rgba(0, 0, 0, 0.96);
+  outline: none;
+  border-bottom: none;
+  background-color: white;
+}
+
+form {
+  margin-bottom: 1em;
+}
+
+.button {
+  border: none;
+  border-radius: 0.8em;
+  background-color: rgba(206, 144, 51, 0.664);
+  color: rgb(110, 107, 107);
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: rgba(206, 144, 51, 0.815);
+  color: rgb(70, 69, 69);
+}
+
+.button:active {
+  background-color: rgba(206, 144, 51, 0.945);
+  color: rgb(0, 0, 0);
 }
